@@ -6,7 +6,7 @@
     <column name="name" size="255" type="VARCHAR" required="true" description="Category name" />
     <column name="order" type="INTEGER" size="4" description="Orden" />
     <column name="module" size="255" type="VARCHAR" description="Module name if it is for a module" default="" />
-    <column name="active" type="BOOLEAN" required="true" description="Is category active?" />
+    <column name="active" type="BOOLEAN" required="true" default="1" description="Is category active?" />
     <column name="isPublic" type="BOOLEAN" required="true" description="Is category public?" default="0" />
     <column name="oldId" required="true" type="INTEGER" size="5" description="Old Id" />
     <column name="description" required="false" type="VARCHAR" size="255" description="Descripcion de la categoria" />
